# repo-flow-mcp

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PARSER_ENHANCEMENT_PLAN.md  README.md  pyproject.toml
docs/: tui-subagent-contracts.prompt.md
mcp-client/: README.md  package-lock.json  package.json  tsconfig.json
mcp-client/src/: cli.ts  github.ts  llm.ts  localizer.ts  log.ts  mcp.ts  patch.ts  review.ts
src/repo_flow_mcp/: __init__.py  cli.py  doc_index.py  graph_builder.py  graph_cache.py  graph_persistence.py  interfaces.py  models.py  repo_fetcher.py  repo_watcher.py  server.py  settings.py  symbol_index.py  worktree_cache.py
src/repo_flow_mcp/parsers/: __init__.py  build_parser.py  ci_parser.py  code_parser.py  code_parser_query.py  docker_parser.py  github_actions_parser.py  makefile_parser.py  markdown_parser.py  shell_parser.py  tree_sitter_helpers.py  tree_sitter_parser.py
tests/: test_cli.py  test_doc_index.py  test_graph_builder.py  test_graph_cache.py  test_graph_schema_snapshot.py  test_parsers_hardening.py  test_repo_watcher.py  test_runner_localizer.py  test_server_batch.py  test_server_consolidated.py  test_symbol_index.py  test_tree_sitter_parser.py
tests/e2e/: _helpers.py  conftest.py  test_pr_workflow.py
tests/fixtures/repo_sample/: .gitlab-ci.yml  BUILD.bazel  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  docker-compose.yml
tests/fixtures/repo_sample/.github/workflows/: ci.yml
tests/fixtures/repo_sample/docs/: SKILL.md
tests/fixtures/repo_sample/scripts/: export.py  package.sh  publish.py  train.sh
(+6 files in other folders)
