[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-flow-mcp"
version = "0.1.0"
description = "Production-ready MCP server for unified code, script, and dependency flow graphs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Repo Flow Team"}]
dependencies = [
  "mcp>=1.8.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.2",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack>=0.4",
  "watchdog>=4.0.0",
  "markdown-it-py>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
repo-flow-mcp = "repo_flow_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
